--- a/viva_city/index.html
+++ b/viva_city/index.html
@@ -10,18 +10,17 @@
   <header>
     <div class="logo">
       <!-- Add your logo image here -->
-        <img src="imagenes/azul.jpg" alt="Logo">
+        <img src="imagenes/B LOGO.png" alt="Logo">
     </div>
-    <nav>
-      <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Eventos</a></li>
-        <li><a href="#">Hospedaje</a></li>
-        <li><a href="#">Comida</a></li>
-        <li><a href="#">Turismo</a></li>
-        <li><a href="#">Mapa</a></li>
-      </ul>
-    </nav>
+    <div class="frame">
+
+        <button class="custom-btn btn-3"><span>Inicio</span></button>
+        <button class="custom-btn btn-10">Eventos</button>
+        <button class="custom-btn btn-10">Hospedaje</button>
+        <button class="custom-btn btn-10">Comida</button>
+        <button class="custom-btn btn-10">Turismo</button>
+        <button class="custom-btn btn-10">Mapa</button>
+      </div>
     <div class="login-signup">
         <button>Login</button>
         <button>Sign Up</button>
@@ -40,23 +39,26 @@
     </div>
   </main>
 <main>
-    <section>
-        <h2 class="eventos">Eventos</h2>
-        <div class="card">
-            <h3>Evento 1</h3>
-            <img src="imagenes/evento-imgpeq2.jpeg"/>
-            <p>Hora: 10:00 AM</p>
-        </div>
-        <div class="card">
-            <h3>Evento 2</h3>
-            <img src="imagenes/eventos.png"/>
-            <p>Hora: 12:00 PM</p>
-        </div>
-        <div class="card">
-            <h3>Evento 3</h3>
-            <img src="imagenes/evento-imgpeq.jpeg"/>
-            <p>Hora: 3:00 PM</p>
-        </div>
+    <section class="eventos">
+        <h2 >Eventos</h2>
+        <section class="cards_events">
+            <div class="card">
+                <img src="imagenes/evento-imgpeq2.jpeg"/>
+                <h5>Evento 1</h5>
+                <p>Hora: 10:00 AM</p>
+            </div>
+            <div class="card">
+                <img src="imagenes/eventos.png"/>
+                <h5>Evento 2</h5>
+                <p>Hora: 12:00 PM</p>
+            </div>
+            <div class="card">
+                <img src="imagenes/evento-imgpeq1.jpeg"/>
+                <h5>Evento 3</h5>
+                <p>Hora: 3:00 PM</p>
+            </div>
+        </section>
+
     </section>
 
     <section>
